<resources>
    <string name="app_name">Scrubele</string>
    <color name="pink">#F64160</color>
    <string name="app_name_">TextInputLayout</string>
    <string name="enterUsername">Enter Username</string>
    <string name="enterPassword">Enter Password</string>
    <string name="emailIsUsed">Email is already used</string>
    <string name="requiredField">Field is required</string>
    <string name="incorrectField">Field is incorrect</string>
    <string name="incorrectInput">Incorrect email or password</string>
    <string name="fillUpCredentials">Fill up the credentials</string>
    <string name="successfulSignIn">Successfully signed in :)</string>
    <string name="successfulSignUp">Successfully registered :)</string>
    <string name="errorSignIn">Error signed in :(</string>
    <string name="errorSignUp">Error signed up :(</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="your_name">Your name</string>
    <string name="phone_number">Phone number</string>
    <string name="image">image</string>
    <string name="welcome">Welcome</string>
    <string name="list_activity_error">Fetch timeline error:</string>
    <string name="network_disconnected">Network is disconnected</string>
    <string name="successful_photo_downloading">download success</string>
    <string name="error_photo_downloading">Error downloading</string>
    <string name="profile_name">Name</string>
    <string name="profile_phone">Phone</string>
    <string name="email_is_updated">Email is updated</string>
    <string name="update_profile">Update profile</string>
    <string name="update_password">Update password</string>
    <string name="change_password">Change password</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="photo_is_uploaded">Photo is uploaded</string>
    <string name="list">List</string>
    <string name="tab2">Tab2</string>
    <string name="profile">Profile</string>
    <string name="successfully_update_profile">Successfully updated</string>
    <string name="select_picture">Select Picture</string>
    <string name="upload_picture">Uploading Picture....</string>
    <string name="add">add</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="size">Size</string>
    <string name="sucessfully_posted">Object is successfully posted</string>
    <string name="default_notification_channel_id">Channel ID</string>
</resources>
