<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/old_password">

            <EditText
                android:id="@+id/profile_password_old"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_password">

            <EditText
                android:id="@+id/profile_password_new"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnUpdateProfile"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_password"
            android:textSize="20sp" />

    </LinearLayout>
