<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.AddObjectActivity">

    <include layout="@layout/app_bar" />


    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-7dp"
        android:indeterminate="true"
        android:max="100"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/addObjectPhoto"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:contentDescription="TODO"
        android:scaleType="centerCrop" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name">

        <EditText
            android:id="@+id/addName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description">

        <EditText
            android:id="@+id/addDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/size">

        <EditText
            android:id="@+id/addSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/addBtn"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:textSize="20sp" />

</LinearLayout>